workhorse/gitops/online-boutique/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique
  namespace: online-boutique-dev
spec:
  ingressClassName: nginx
  rules:
  - host: boutique.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
